--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -42,6 +42,13 @@
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>PushButton</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -128,7 +135,13 @@
      </layout>
     </item>
     <item row="2" column="0">
-     <widget class="QTextBrowser" name="textBrowserInformation"/>
+     <widget class="QTextBrowser" name="textBrowserInformation">
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
